Actualizacion de UX
Implementacion de las recomendaciones del QA

--- a/src/app/modules/admin/users/post-detail/post-detail.component.html
+++ b/src/app/modules/admin/users/post-detail/post-detail.component.html
@@ -1,6 +1,19 @@
-<div class="container w-full grid justify-items-center " >
-        <mat-card class="cursor-pointer bg-slate-900 font-bold text-white w-full">
+<div class="container m-auto md:max-w-4xl" >
+        <mat-card class="bg-slate-900 text-white rounded-md font-bold m-4">
             <div class="text-xl p-2">Title: <br> {{item.title}} <br></div>
-            <div class="p-2 m-auto overflow-auto">Body: <br> {{item.body}} <br> </div>
+            <div class="p-2 m-auto overflow-auto"> {{item.body}}</div>
+        </mat-card>
+        <mat-card class="m-4 w-full ">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia quibusdam facere nihil numquam. Repellat alias exercitationem labore, quibusdam aspernatur ipsum velit rem. 
+            Ratione maiores natus molestiae aliquid maxime! Dolores, minus!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium alias cumque facere ab voluptatum architecto officiis nemo. At ipsam, fuga modi dolor totam tempore quod aperiam veritatis beatae, voluptate voluptates!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos beatae voluptas alias error laudantium debitis reiciendis autem eligendi itaque facilis, saepe perspiciatis quisquam deserunt aut dolorum voluptatibus fugiat rem. Maxime.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dignissimos unde molestias? Ullam eum expedita autem ipsam temporibus reprehenderit repellendus beatae, amet corporis. Consequuntur laudantium quibusdam, similique doloribus repudiandae eaque.  
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat at nemo ex quisquam porro sed, rem tempore quibusdam odio molestias voluptatem sunt accusantium ipsa facere cumque explicabo corporis vero dicta.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam nobis commodi expedita eaque quisquam, reiciendis officiis ex asperiores vero veritatis incidunt, eligendi sit veniam doloribus quaerat atque! In, necessitatibus inventore.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, cum. Magnam quisquam distinctio enim maxime! Eum facilis sit nobis tenetur fugiat quibusdam. Consequatur voluptatum numquam soluta ipsam cupiditate eveniet corrupti!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, saepe ipsum. Voluptates non voluptas adipisci eius exercitationem repellat rerum officiis amet eaque fugiat, architecto nobis suscipit ipsam assumenda accusantium quos?
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi ducimus saepe recusandae nesciunt modi et vitae, corrupti minima itaque cupiditate iste eos quia! Dolorem nisi asperiores, excepturi autem ipsum eligendi.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil quae non quam, expedita enim laborum ab atque soluta, veniam temporibus assumenda hic iure consectetur earum officia illo saepe, quod dolorum.
         </mat-card>
     </div>
