--- a/src/app/modules/admin/users/add-posts/add-posts.component.html
+++ b/src/app/modules/admin/users/add-posts/add-posts.component.html
@@ -1,14 +1,5 @@
-<div [formGroup]="postInfo" class="flex flex-col">
+<div [formGroup]="postInfo" class="border-slate-500 border-2 rounded-md p-2 md:p-5 flex flex-col md:max-w-md m-auto w-11/12">
         <p class="font-bold text-xl">Add a new post</p>
-
-        <mat-form-field  appearance="outline" class="w-ful0l">
-            <mat-label>UserId</mat-label>
-            <input matInput placeholder="User Id" formControlName="userId" disabled>
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="w-ful0l">
-            <mat-label>ID</mat-label>
-            <input matInput placeholder="Id" type="number" formControlName="Id">
-        </mat-form-field>
         <mat-form-field appearance="outline" class="w-ful0l">
             <mat-label>Title</mat-label>
             <input matInput placeholder="Title" type="text" formControlName="title">
@@ -17,10 +8,12 @@
             <mat-label>Body</mat-label>
             <input matInput placeholder="Body" type="text" formControlName="body">
         </mat-form-field>
-        <button mat-raised-button color="primary" (click)="addPosts()">
-            Add Post
-        </button>
-        <button mat-raised-button (click)="hidePost()">
-            Cancel
-        </button>
+        <div class="flex flex-row justify-end">
+            <button mat-raised-button class="m-auto" color="primary" (click)="addPosts()">
+                Add Post
+            </button>
+            <button mat-raised-button class="m-auto" (click)="hidePost()">
+                Cancel
+            </button>
+        </div>
     </div>
